--- a/TODO
+++ b/TODO
@@ -5,3 +5,4 @@
 - init ray directions (is facing up/down/right/left)
 - refactor all raycasting functions calls
 - check if all the attributes are initialized
+- call mlx put image to window in the right place
